fix overflow-x at table component

--- a/components/Molecules/Table/styles.module.scss
+++ b/components/Molecules/Table/styles.module.scss
@@ -1,3 +1,8 @@
+.table__wrapper {
+  overflow-x: auto;
+  padding-right: 1px;
+}
+
 .container {
   width: 100%;
   padding: 20px;
